--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: gbus738tutorials
-Title: R tutorial code for MIS 431 at George Mason University
+Title: R tutorial code for GBUS 738 at George Mason University
 Version: 0.1
 Authors@R: person("David", "Svancer", email = "dsvancer@gmu.edu",
                   role = c("aut", "cre"))
